# gallery-cms

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Gruntfile.coffee  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  setup.cfg  snowpack.config.json
gallery/: crop.py  gallery.py  gallery_test.py  iptc_debug.py  lenna.py  routes.py  schema.py  schema_test.py  server.py  settings.py
public/: index.html
src/: Album.jsx  AlbumPage.css  AlbumPage.jsx  AlbumPage.scss  AlbumThumb.jsx  AlbumThumb.scss  App.css  App.jsx  App.scss  AppContext.js  RatingMenu.jsx  RatingMenu.scss  Thumbnail.jsx  Thumbnail.scss  _variables.scss  graphql.js
src-old/scripts/: main.js
src-old/styles/: app.scss
src/scripts/: main.js
src/styles/: _Photo.scss  app.scss  main.scss
templates/: index.html  item.html  item_form.html
